--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="fr" data-theme="light">
+    <head>
+        <title>Personal Webpage</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+        />
+        <script src="script.js" defer></script>
+    </head>
+    <body>
+        <header>
+            <div class="right-header">
+                <h1>Personal Webpage</h1>
+            </div>
+            <div class="left-header">
+                <button
+                    type="button"
+                    data-theme-toggle
+                    aria-label="Change to light theme"
+                >
+                    <span class="material-symbols-outlined">
+                        radio_button_partial
+                    </span>
+                </button>
+            </div>
+        </header>
+        test
+    </body>
+</html>
