--- a/fr/cv_img.html
+++ b/fr/cv_img.html
@@ -28,6 +28,7 @@
 			</div>
 		</header>
 		<div class="content">
+			<image src="../hoogenbosch_lucca_cv_2024.jpg"></image>
 		</div>
 	</body>
 </html>
